-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Beta1
-
None
-
9f75292a602ba22b1a3a46f8a161020d2f847565
The void QGLXContext::queryDummyContext() function has the unwanted side effect of unsetting the current OpenGL context. This causes https://codereview.qt-project.org/#change,71011 to fail on X11.
The above function should reset the original context to have no side effects.